@@ -1,6 +1,7 @@
 package org.sopt.server.cgv.service;
 
 import lombok.RequiredArgsConstructor;
+import org.sopt.server.cgv.domain.Movie;
 import org.sopt.server.cgv.dto.response.MovieListResponseDto;
 import org.sopt.server.cgv.global.response.ApiResponse;
 import org.sopt.server.cgv.repository.MovieRepository;
@@ -20,7 +21,11 @@ public class MovieService {
     public List<MovieListResponseDto> getMovieList() {
         return movieRepository.findAll().stream()
                 .map(MovieListResponseDto::of)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public Movie getMovieInfo(Long movieId) {
+        return movieRepository.findByIdOrThrow(movieId);
     }
 
 }
